learn php7 new characteristic

--- a/Vote/poll.html
+++ b/Vote/poll.html
@@ -18,9 +18,9 @@
                 }
             }
 
-            xmlhttp.open("GET", "poll_vote.php?vote =" + int, true);
+            xmlhttp.open("GET", "poll_vote.php?vote=" + int, true);
             console.log(int);
-            xmlhttp.send();
+            xmlhttp.send(null);
         }
     </script>
 </head>
